--- a/50-50-raffle/package.json
+++ b/50-50-raffle/package.json
@@ -2,7 +2,7 @@
   "name": "miamisburg-rotary-raffle",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MiamisburgRotaryClub.github.io/miamisburg-rotary-raffle",
+  "homepage": "https://MiamisburgRotaryClub.github.io/50-50-raffle",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -21,12 +21,6 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
