--- a/50-50-raffle/package.json
+++ b/50-50-raffle/package.json
@@ -2,7 +2,7 @@
   "name": "miamisburg-rotary-raffle",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://MiamisburgRotaryClub.github.io/50-50-raffle/live",
+  "homepage": "https://q.miamisburgrotary.org/50-50-raffle/live",
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -11,7 +11,7 @@
     "lucide-react": "^0.556.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
-    "react-scripts": "^0.0.0",
+    "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -35,6 +35,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.3.0"
+    "autoprefixer": "^10.4.22",
+    "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.15"
   }
 }
